[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/chemical_reaction/chemrea.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/final-frontier/FinalFrontier-BEd.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/andromeda/AndromedaTV.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://src/Interface/Tooltip/CustomTooltip.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.321569, 0.337255, 0.592157 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.952941, 0.803922, 0, 1 )
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 6

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 15
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 19
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="CustomTooltip" type="PopupPanel"]
margin_right = 22.0
margin_bottom = 20.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectName" type="Label" parent="VBox"]
margin_right = 249.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 2 )
text = "Object Name, Object Type"
align = 1

[node name="ObjectFaction" type="Label" parent="VBox"]
margin_top = 22.0
margin_right = 249.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 3 )
text = "Object Affilation, Current Object State"
align = 1

[node name="ObjectDetails" type="Label" parent="VBox"]
margin_top = 41.0
margin_right = 249.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 4 )
text = "Object Details "
align = 1
